# SecondYear

./: err.txt
BeginTask-0/: ArrayHandler.h  CMakeLists.txt  tests.cpp  tmp.cpp
BitField-2/: BitField.cpp  CMakeLists.txt  Set.cpp  Set.h  StringField.cpp  StringField.h  main.cpp
